# langfuse-examples

./: .gitignore  README.md
applications/custom-annotation-ui/: .gitignore  README.md  package-lock.json  package.json
applications/custom-annotation-ui/app/: globals.css  layout.tsx  page.tsx
applications/custom-annotation-ui/hooks/: use-keyboard-navigation.ts  use-queue-annotation.ts
applications/custom-annotation-ui/lib/: api.ts  langfuse-client.ts  langfuse-web.ts  message-utils.ts  types.ts
applications/evaluating-ai-agent-skills/: README.md  requirements.txt  run_experiment_auto.py
applications/github-issue-search/: .env.example  README.md  pyproject.toml
applications/github-issue-search/github_issue_search/: main.py
applications/golang-langchain-demo/: README.md  go.mod  go.sum  main.go
applications/kong-ai-plugin/: Readme.md  kong-plugin.yml
applications/kong-ai-plugin/rockspec/: kong-plugin-ai-tracing-1.0.0-1.rockspec
applications/langchain-langgraph-demo/: package-lock.json  package.json  tsconfig.json
applications/langchat/: README.md
applications/langchat/server/: bot.py  env.example  pyproject.toml
applications/laravel-langfuse/: README.md
applications/mcp-tracing/: .gitignore  README.md  pyproject.toml
applications/mcp-tracing/src/: main.py  search_server.py
applications/mcp-tracing/src/utils/: otel_utils.py
applications/quarkus-langchain4j-demo/: README.md  pom.xml
applications/rag/: .env.example  pyproject.toml
applications/rag/rag_bot/: answer_evaluation.py  chunk_evaluation.py  main.py
applications/spring-ai-demo/: README.md  pom.xml
applications/user-feedback/: .gitignore  package-lock.json
applications/vercel-ai-sdk-chat/: README.md
applications/weekly-user-topics-digest/: README.md  SKILL.md
(+66 files in other folders)
