[project]
name = "mcp-tracing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "exa-py>=1.16.1",
    "langfuse>=3.6.2",
    "openai-agents>=0.3.3",
    "openinference-instrumentation-openai-agents>=1.3.0",
    "fastmcp>=2.12.4",
]
